Fix scrollbar bug in tool selection

--- a/scenes/seasonofcaring/sass/_tools.scss
+++ b/scenes/seasonofcaring/sass/_tools.scss
@@ -17,7 +17,7 @@
     box-sizing: border-box;
     max-height: 283px;
     min-height: 100px;
-    overflow: auto;
+    overflow: hidden;
     -webkit-overflow-scrolling: touch;
   }
 
@@ -75,7 +75,7 @@
     width: 25%;
     height: 78px;
   }
-  
+
   .Tool-container--third {
     width: 33.3%;
     height: 70px;
@@ -172,7 +172,7 @@
     height: 80px;
     position: relative;
   }
-  
+
   .Tool-sliderContainer {
     background: url('img/tools/slider-size-bg.svg') no-repeat;
     background-size: contain;
@@ -187,7 +187,7 @@
     top: 0;
     width: 182px;
   }
-  
+
   .goog-slider-thumb,
   .Slider-thumb {
     height: 20px;
@@ -236,7 +236,7 @@
       height: 176px;
     }
   }
-  
+
   .Tool-crayon--light-green {
     @include makeCrayon('img/tools/crayon-light-green.svg');
 
@@ -281,7 +281,7 @@
       height: 176px;
     }
   }
-  
+
   .Tool-crayon--violet {
     @include makeCrayon('img/tools/crayon-violet.svg');
 
