--- a/scenes/seasonofcaring/seasonofcaring-scene.scss
+++ b/scenes/seasonofcaring/seasonofcaring-scene.scss
@@ -18,7 +18,7 @@ $name: 'module-seasonofcaring';
   bottom: 0;
   left: 0;
 
-  .seasonofgiving {
+  .seasonofcaring {
     background: url(img/season-of-giving-bg.svg) no-repeat;
     background-position: center;
     background-size: cover;
